--- a/utilities.css
+++ b/utilities.css
@@ -1,1 +1,227 @@
-:root{--color-primary-main:#2463eb;--color-primary-darker:#1e3fae;--color-primary-dark:#1d4fd7;--color-primary-light:#3c83f6;--color-primary-lighter:#61a6fa;--color-primary-20:rgba(36,99,235,0.2);--color-primary-15:rgba(36,99,235,0.15);--color-primary-10:rgba(36,99,235,0.1);--color-secondary-main:#4cae4f;--color-secondary-darker:#357937;--color-secondary-dark:#439846;--color-secondary-light:#5fb962;--color-secondary-lighter:#75c277;--color-secondary-20:rgba(76,174,80,0.2);--color-secondary-15:rgba(76,174,80,0.15);--color-secondary-10:rgba(76,174,80,0.1)}input[type=search]::-ms-clear,input[type=search]::-ms-reveal{display:none;height:0;width:0}input[type=search]::-webkit-search-cancel-button,input[type=search]::-webkit-search-decoration,input[type=search]::-webkit-search-results-button,input[type=search]::-webkit-search-results-decoration{display:none}input:not(:-moz-placeholder-shown)~.input-label, textarea:not(:-moz-placeholder-shown)~.input-label{font-size:.75rem;line-height:1rem;color:inherit}input:focus-visible~.input-label,input:focus~.input-label,input:not(:placeholder-shown)~.input-label,textarea:focus-visible~.input-label,textarea:focus~.input-label,textarea:not(:placeholder-shown)~.input-label{font-size:.75rem;line-height:1rem;color:inherit}input:not(:-moz-placeholder-shown)~.input-label-outlined, textarea:not(:-moz-placeholder-shown)~.input-label-outlined{margin-top:-.5625rem;margin-left:.5rem;background-color:#fff;padding-left:.25rem;padding-right:.25rem;line-height:1.125rem}input:focus-visible~.input-label-outlined,input:focus~.input-label-outlined,input:not(:placeholder-shown)~.input-label-outlined,textarea:focus-visible~.input-label-outlined,textarea:focus~.input-label-outlined,textarea:not(:placeholder-shown)~.input-label-outlined{margin-top:-.5625rem;margin-left:.5rem;background-color:#fff;padding-left:.25rem;padding-right:.25rem;line-height:1.125rem}input:not(:-moz-placeholder-shown)~.input-label-filled.input-label-medium, textarea:not(:-moz-placeholder-shown)~.input-label-filled.input-label-medium{margin-top:.25rem;margin-left:.75rem;line-height:1.25rem}input:focus-visible~.input-label-filled.input-label-medium,input:focus~.input-label-filled.input-label-medium,input:not(:placeholder-shown)~.input-label-filled.input-label-medium,textarea:focus-visible~.input-label-filled.input-label-medium,textarea:focus~.input-label-filled.input-label-medium,textarea:not(:placeholder-shown)~.input-label-filled.input-label-medium{margin-top:.25rem;margin-left:.75rem;line-height:1.25rem}input:not(:-moz-placeholder-shown)~.input-label-filled.input-label-small, textarea:not(:-moz-placeholder-shown)~.input-label-filled.input-label-small{margin-top:.125rem;margin-left:.75rem;line-height:1.25rem}input:focus-visible~.input-label-filled.input-label-small,input:focus~.input-label-filled.input-label-small,input:not(:placeholder-shown)~.input-label-filled.input-label-small,textarea:focus-visible~.input-label-filled.input-label-small,textarea:focus~.input-label-filled.input-label-small,textarea:not(:placeholder-shown)~.input-label-filled.input-label-small{margin-top:.125rem;margin-left:.75rem;line-height:1.25rem}.checkbox .status-active,.checkbox .status-indeterminate{display:none}.checkbox .status-inactive{display:block}.checkbox input:checked~.status-active,.checkbox input:indeterminate~.status-indeterminate{display:block}.checkbox input:checked~.status-inactive,.checkbox input:indeterminate~.status-active,.checkbox input:indeterminate~.status-inactive{display:none}.radio .status-active{display:none}.radio .status-inactive,.radio input:checked~.status-active{display:block}.radio input:checked~.status-inactive{display:none}.backdrop-blur-2{-webkit-backdrop-filter:blur(2px);backdrop-filter:blur(2px)}.border-spacing-0{border-spacing:0}.flex-inherit{align-content:inherit;align-items:inherit;align-self:inherit;flex-direction:inherit;justify-content:inherit;justify-items:inherit;justify-self:inherit}.left-half{left:50%;transform:translateX(-50%)}.sticky-column:before{position:absolute;left:-1px;top:0;display:block;height:100%;border-left-width:1px;border-color:#ddd;content:""}input::-webkit-inner-spin-button,input::-webkit-outer-spin-button{-webkit-appearance:none;margin:0}input[type=number]{-moz-appearance:textfield}.no-scrollbar::-webkit-scrollbar{display:none}.no-scrollbar{-ms-overflow-style:none;scrollbar-width:none}.top-half{top:50%;transform:translateY(-50%)}.will-change-transform{will-change:transform}.will-change-width{will-change:width}
+:root {
+  --color-primary-main: hsla(221,83%,53%,1);
+  --color-primary-darker: hsla(226,71%,40%,1);
+  --color-primary-dark: hsla(224,76%,48%,1);
+  --color-primary-light: hsla(217,91%,60%,1);
+  --color-primary-lighter: hsla(213,94%,68%,1);
+  --color-primary-20: hsla(221,83%,53%, 0.2);
+  --color-primary-15: hsla(221,83%,53%, 0.15);
+  --color-primary-10: hsla(221,83%,53%, 0.1);
+
+  --color-secondary-main: hsla(122, 39%, 49%, 1);
+  --color-secondary-darker: hsla(122, 39%, 34%, 1);
+  --color-secondary-dark: hsla(122, 39%, 43%, 1);
+  --color-secondary-light: hsla(122, 39%, 55%, 1);
+  --color-secondary-lighter: hsla(122, 39%, 61%, 1);
+  --color-secondary-20: hsla(122, 39%, 49%, 0.2);
+  --color-secondary-15: hsla(122, 39%, 49%, 0.15);
+  --color-secondary-10: hsla(122, 39%, 49%, 0.1);
+}
+
+input[type=search]::-ms-clear {
+  display: none;
+  height: 0;
+  width : 0;
+}
+
+input[type=search]::-ms-reveal {
+  display: none;
+  height: 0;
+  width : 0;
+}
+
+input[type="search"]::-webkit-search-decoration,
+input[type="search"]::-webkit-search-cancel-button,
+input[type="search"]::-webkit-search-results-button,
+input[type="search"]::-webkit-search-results-decoration {
+  display: none;
+}
+
+/* TextInput */
+
+input:not(:-moz-placeholder-shown) ~ .input-label, textarea:not(:-moz-placeholder-shown) ~ .input-label {
+  font-size: 0.75rem;
+  line-height: 1rem;
+  color: inherit;
+}
+
+input:focus ~ .input-label,
+input:focus-visible ~ .input-label,
+input:not(:placeholder-shown) ~ .input-label,
+textarea:focus ~ .input-label,
+textarea:focus-visible ~ .input-label,
+textarea:not(:placeholder-shown) ~ .input-label {
+  font-size: 0.75rem;
+  line-height: 1rem;
+  color: inherit;
+}
+
+input:not(:-moz-placeholder-shown) ~ .input-label-outlined, textarea:not(:-moz-placeholder-shown) ~ .input-label-outlined {
+  margin-top: -0.5625rem;
+  margin-left: 0.5rem;
+  background-color: hsla(0,0%,100%,1);
+  padding-left: 0.25rem;
+  padding-right: 0.25rem;
+  line-height: 1.125rem;
+}
+
+input:focus ~ .input-label-outlined,
+input:focus-visible ~ .input-label-outlined,
+input:not(:placeholder-shown) ~ .input-label-outlined,
+textarea:focus ~ .input-label-outlined,
+textarea:focus-visible ~ .input-label-outlined,
+textarea:not(:placeholder-shown) ~ .input-label-outlined {
+  margin-top: -0.5625rem;
+  margin-left: 0.5rem;
+  background-color: hsla(0,0%,100%,1);
+  padding-left: 0.25rem;
+  padding-right: 0.25rem;
+  line-height: 1.125rem;
+}
+
+input:not(:-moz-placeholder-shown) ~ .input-label-filled.input-label-medium, textarea:not(:-moz-placeholder-shown) ~ .input-label-filled.input-label-medium {
+  margin-top: 0.25rem;
+  margin-left: 0.75rem;
+  line-height: 1.25rem;
+}
+
+input:focus ~ .input-label-filled.input-label-medium,
+input:focus-visible ~ .input-label-filled.input-label-medium,
+input:not(:placeholder-shown) ~ .input-label-filled.input-label-medium,
+textarea:focus ~ .input-label-filled.input-label-medium,
+textarea:focus-visible ~ .input-label-filled.input-label-medium,
+textarea:not(:placeholder-shown) ~ .input-label-filled.input-label-medium {
+  margin-top: 0.25rem;
+  margin-left: 0.75rem;
+  line-height: 1.25rem;
+}
+
+input:not(:-moz-placeholder-shown) ~ .input-label-filled.input-label-small, textarea:not(:-moz-placeholder-shown) ~ .input-label-filled.input-label-small {
+  margin-top: 0.125rem;
+  margin-left: 0.75rem;
+  line-height: 1.25rem;
+}
+
+input:focus ~ .input-label-filled.input-label-small,
+input:focus-visible ~ .input-label-filled.input-label-small,
+input:not(:placeholder-shown) ~ .input-label-filled.input-label-small,
+textarea:focus ~ .input-label-filled.input-label-small,
+textarea:focus-visible ~ .input-label-filled.input-label-small,
+textarea:not(:placeholder-shown) ~ .input-label-filled.input-label-small {
+  margin-top: 0.125rem;
+  margin-left: 0.75rem;
+  line-height: 1.25rem;
+}
+
+/* Checkbox */
+
+.checkbox .status-active,
+.checkbox .status-indeterminate {
+  display: none;
+}
+
+.checkbox .status-inactive {
+  display: block;
+}
+
+.checkbox input:checked ~ .status-active,
+.checkbox input:indeterminate ~ .status-indeterminate {
+  display: block;
+}
+
+.checkbox input:checked ~ .status-inactive,
+.checkbox input:indeterminate ~ .status-active,
+.checkbox input:indeterminate ~ .status-inactive {
+  display: none;
+}
+
+/* Radio */
+
+.radio .status-active  {
+  display: none;
+}
+
+.radio .status-inactive {
+  display: block;
+}
+
+.radio input:checked ~ .status-active {
+  display: block;
+}
+
+.radio input:checked ~ .status-inactive  {
+  display: none;
+}
+
+.backdrop-blur-2 {
+  -webkit-backdrop-filter: blur(2px);
+          backdrop-filter: blur(2px);
+}
+
+.border-spacing-0 {
+  border-spacing: 0;
+}
+
+.flex-inherit {
+  align-content: inherit;
+  align-items: inherit;
+  align-self: inherit;
+  flex-direction: inherit;
+  justify-content: inherit;
+  justify-items: inherit;
+  justify-self: inherit;
+}
+
+.left-half {
+  left: 50%;
+  transform: translateX(-50%);
+}
+
+.sticky-column::before {
+  position: absolute;
+  left: -1px;
+  top: 0px;
+  display: block;
+  height: 100%;
+  border-left-width: 1px;
+  border-color: #ddd;
+  content: "";
+}
+
+/* Chrome, Safari, Edge, Opera */
+
+input::-webkit-outer-spin-button,
+input::-webkit-inner-spin-button {
+  -webkit-appearance: none;
+  margin: 0;
+}
+
+/* Firefox */
+
+input[type=number] {
+  -moz-appearance: textfield;
+}
+
+/* Chrome, Safari and Opera */
+
+.no-scrollbar::-webkit-scrollbar {
+  display: none;
+}
+
+.no-scrollbar {
+  -ms-overflow-style: none;  /* IE and Edge */
+  scrollbar-width: none;  /* Firefox */
+}
+
+.top-half {
+  top: 50%;
+  transform: translateY(-50%);
+}
+
+.will-change-transform {
+  will-change: transform;
+}
+
+.will-change-width {
+  will-change: width;
+}
